--- a/test.css
+++ b/test.css
@@ -1,12 +1,8 @@
-*{
+input-group{
 text-align:center;
 
 }
 
-#b1, #b2, #b3, #b4, #b5, 
-    #b6, #b7, #b8, #b9 {
-        border: 1px solid gray;
-        border-radius: 6px;
-        font-size: 30px;
-        text-align: center;
-    }
+h5{
+    text-align:left;
+}
